# fastdfs

./: .gitignore  FASTDFS_PHASE3_SUMMARY.md  FASTDFS_REFACTOR_PLAN.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  demo_fastdfs_api.py  dt_dfs_bug.py  pyproject.toml  test_basic.py  test_fastdfs_api.py  validate_extraction.py
.github/workflows/: ci.yml
dev_logs/: 002_TASK_TABLE_REFACTOR_PLAN.md  003_TASK_TABLE_REFACTOR_IMPLEMENTATION.md  004_TASK_TABLE_REFACTOR_UPDATE.md  005_TASK_TABLE_REMOVAL_PLAN.md  006_PHASE_1_2_COMPLETION_SUMMARY.md  007_PHASE_3_TRANSFORM_INTERFACE_COMPLETION.md  008_PHASE_4_MINIMAL_API_COMPLETION.md  009_MULTI_KEY_AND_TRANSFORMS_UPDATE.md  010_ADAPTER_SUBPACKAGE_COMPLETION.md  010_ADAPTER_SUBPACKAGE_PLAN.md  011_ADAPTER_UPDATE_IN_MEMORY.md  012_ADAPTER_LOAD_ALL_SPLITS.md  013_ADAPTER_REVERT_RDB_ONLY.md  014_REFACTOR_RDB_NAMING.md  015_HIGH_LEVEL_API_AND_INFERENCE.md  016_ADAPTER_EXAMPLES_AND_REFINEMENTS.md  017_RDB_ADAPTERS_PLAN.md  018_ADD_TARGET_HISTORY_OPTION.md  019_RDB_CREATION_REFACTOR_PLAN.md  020_DBINFER_GENERALIZATION.md  020_RDB_VALIDATION_POLISH.md  021_DFS2SQL_MERGE_TO_CONCAT_PLAN.md  022_ENCODE_CATEGORICAL_AS_FLOAT.md  FASTDFS_PROJECT_COMPLETION.md  LOGGING_REFACTOR_SUMMARY.md
docs/: aggregation_primitives.md  api_reference.md  preprocess_architecture.md  user_guide.md
examples/: README.md  basic_usage.py  cli_example.py  ctu_financial_example.py  dbinfer_diginetica_example.py  mysql_finance_example.py  python_api_example.py  relbench_f1_example.py
examples/minimal_examples/: README.md  run_all_examples.py  run_examples.sh
examples/minimal_examples/example1_direct_features/: README.md  create_example.py  metadata.yaml
examples/minimal_examples/example2_single_aggregation/: README.md  create_example.py  metadata.yaml
examples/minimal_examples/example3_multi_level_aggregation/: README.md  create_example.py  metadata.yaml
examples/minimal_examples/example4_cutoff_time/: README.md  create_example.py  metadata.yaml
examples/minimal_examples/example5_multiple_relationships/: README.md  create_example.py  metadata.yaml
fastdfs/: __init__.py  api.py  api_new.py
fastdfs/adapter/: __init__.py  dbinfer.py  duckdb.py  mysql.py  postgres.py  relbench.py  sql_base.py  sqlite.py
fastdfs/adapter/dbinfer_bench/: __init__.py  dataset_meta.py  download.py  rdb_dataset.py  table_writer.py
fastdfs/cli/: __init__.py  main.py  preprocess.py
fastdfs/dataset/: __init__.py  loader.py  meta.py  rdb.py  rdb_dataset.py  rdb_simplified.py  writer.py
fastdfs/dataset/legacy/: __init__.py  loader.py  meta.py  rdb_dataset.py
fastdfs/dbinfer_bench/: __init__.py  dataset_meta.py  table_loader.py  version.py  yaml_utils.py
fastdfs/dfs/: __init__.py  base_engine.py  dfs2sql_engine.py  duckdb_database.py  featuretools_engine.py  gen_sqls.py
fastdfs/preprocess/: __init__.py  base.py  transform_preprocess.py
fastdfs/preprocess/dfs/: __init__.py  core.py  database.py  dfs2sql_engine.py  dfs_preprocess.py  ft_engine.py  gen_sqls.py
fastdfs/preprocess/transform/: __init__.py  base.py  canonicalize.py  category.py  composite.py  datetime.py  dummy_table.py  fill_timestamp.py  filter_column.py  key_mapping.py  numeric.py  text_dpr.py  text_glove.py  wrapper.py
fastdfs/transform/: __init__.py  base.py  datetime_transform.py  dummy_table_transform.py  encode_categorical.py  fill_missing_pk.py  filter_transform.py  infer_schema.py  multiset_transform.py  type_transform.py  utils.py
fastdfs/utils/: __init__.py  datetime_utils.py  device.py  logging_config.py  type_inference.py  type_utils.py  yaml_utils.py
tests/: test_adapter_hints.py  test_api.py  test_column_groups_shared_schema.py  test_complex_target_columns.py  test_create_rdb.py  test_dbinfer_adapter.py  test_dfs2sql_assembly.py  test_dfs_engines.py  test_duckdb_adapter.py  test_dummy_table_transform.py  test_encode_categorical.py  test_fill_missing_primary_key.py  test_infer_schema.py  test_integration_refactor.py  test_logging_refactor.py  test_rdb.py  test_rdb_save.py  test_rdb_simplified.py  test_relbench_adapter.py  test_shared_schema_loading.py  test_sqlite_adapter.py  test_target_history.py  test_task_metadata_refactor.py  test_transform_pipeline.py  test_transforms.py  test_type_transform.py
tests/data/test_rdb/: metadata.yaml
tests/data/test_rdb/data/: item.npz
tests/data/test_rdb/linkpred/: test.npz  train.npz  validation.npz
tests/data/test_rdb_new/: metadata.yaml
tests/data/test_rdb_new/data/: interaction.npz  user.npz
tests/utils/: test_type_utils.py
