[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastdfs"
version = "0.2.0"
description = "Fast Deep Feature Synthesis for tabular data"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "HKU Shanghai X-Lab"}
]
maintainers = [
    {name = "HKU Shanghai X-Lab"}
]
keywords = ["feature engineering", "deep feature synthesis", "tabular data", "automated ML"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"

# Core dependencies (minimal set focused on DFS)
dependencies = [
    # Data processing
    "pandas>=2.3.3,<3.0",  # pandas>=3.0 will raise issue related to woodwork
    "numpy",
    "scipy",
    "scikit-learn",
    "pyarrow<21.0.0",
    
    # DFS engines
    "featuretools",
    "sqlalchemy",
    "duckdb",
    "sqlglot>=27.8.0,<28.0.0",
    "sql_formatter",
    
    # Configuration and CLI
    "pydantic",
    "pyyaml",
    "tqdm",
    
    # Utilities
    "psutil",
    "loguru",
    "boto3",
    "requests",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]


# Database adapters
postgres = [
    "psycopg2-binary",
]
mysql = [
    "pymysql",
]
all = [
    "psycopg2-binary",
    "pymysql",
]

[project.urls]
Homepage = "https://github.com/HKUSHXLab/fastdfs"
Repository = "https://github.com/HKUSHXLab/fastdfs"
Documentation = "https://github.com/HKUSHXLab/fastdfs/blob/main/fastdfs/README.md"
"Bug Tracker" = "https://github.com/HKUSHXLab/fastdfs/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastdfs*"]

[tool.setuptools.package-data]
fastdfs = ["adapter/dbinfer_bench/*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
